--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,6 +20,12 @@
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/menu_tools" />
+
+        <item
+            android:id="@+id/med_records"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Mddical Records" />
+
     </group>
 
     <item android:title="Communicate">
