--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,33 +8,47 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/home_t1"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="sans-serif-condensed-medium"
-            android:gravity="center"
-            android:text="Checkout general remedies for"
-            android:textColor="#000000"
-            android:textSize="25dp" />
+            android:layout_height="match_parent"
+            android:id="@+id/scrollView">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/home_t1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="sans-serif-condensed-medium"
+                    android:gravity="center"
+                    android:text="Checkout general remedies for"
+                    android:textColor="#000000"
+                    android:textSize="25dp" />
 
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/home_view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="247dp"
-            android:layout_below="@+id/home_t1"
-            android:layout_margin="10dp" />
+                <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/home_view_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="247dp"
+                    android:layout_below="@+id/home_t1"
+                    android:layout_margin="10dp" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/home_view_pager"
+                    android:id="@+id/home_departments_recycler_view"/>
+            </RelativeLayout>
+        </ScrollView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/sos_card"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/home_view_pager"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignBottom="@+id/scrollView"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_margin="80dp"
+            android:layout_marginBottom="20dp"
             android:clickable="true"
             android:elevation="15dp"
             android:focusable="true"
@@ -44,12 +58,12 @@
 
             <Button
                 android:id="@+id/sos_button"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:background="@color/colorPrimary"
                 android:text="SOS"
                 android:textColor="#ffffff"
-                android:textSize="60dp" />
+                android:textSize="30dp" />
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
     <RelativeLayout
