--- a/app/src/main/res/layout/cardview_dispenser.xml
+++ b/app/src/main/res/layout/cardview_dispenser.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="5dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -13,18 +16,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/name_of_the_medicine"
-                android:textStyle="bold"
-                android:text="Name of the medicine"
-                android:textSize="25sp"/>
+                android:text="ABC"
+                android:textSize="20sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/quantity_of_the_medicine"
-                android:textStyle="bold"
-
                 android:text="Quantity"
-                android:textSize="25sp"/>
+                android:textSize="20sp"/>
         </LinearLayout>
 
 
