--- a/app/src/main/res/layout/dispenser_fragment.xml
+++ b/app/src/main/res/layout/dispenser_fragment.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.medicalrecords.MedicalRecords">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -38,8 +35,5 @@
 
         </view>
 
-    </LinearLayout>
 
-
-
-</FrameLayout>
+</LinearLayout>
