--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,13 +14,13 @@
     <fragment
         android:id="@+id/nav_gallery"
         android:name="com.example.transfinitte_decoders.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
+        android:label="User_ID"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.example.transfinitte_decoders.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="Feature 1"
         tools:layout="@layout/fragment_slideshow" />
 
     <fragment
