--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,7 +26,7 @@
     <fragment
         android:id="@+id/nav_tools"
         android:name="com.example.transfinitte_decoders.ui.dispenser.DispenserFragment"
-        android:label="@string/menu_tools"
+        android:label="Pharmacy"
         tools:layout="@layout/fragment_tools" />
 
     <fragment
