MainAcitvity Basic UI done...

--- a/app/src/main/res/layout/cutsom_dept_layout_item.xml
+++ b/app/src/main/res/layout/cutsom_dept_layout_item.xml
@@ -4,7 +4,11 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="10dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
+    android:layout_marginTop="2.5dp"
+    android:layout_marginBottom="2.5dp">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
