--- a/app/src/main/res/layout/activity_medical__report.xml
+++ b/app/src/main/res/layout/activity_medical__report.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,6 +15,8 @@
         android:orientation="vertical">
         <EditText
             android:id="@+id/roll_no"
+            android:inputType="number"
+            android:maxLength="9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -25,9 +27,20 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:scrollbars="vertical"
-            android:lines="8"
-            android:maxLines="10"
             android:hint="PRESCRIBED MEDICINES"/>
+        <EditText
+            android:id="@+id/symptoms"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:scrollbars="vertical"
+            android:hint="Symptoms and Diagnosis"/>
+        <EditText
+            android:id="@+id/followup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:hint="Follow Up"/>
     </LinearLayout>
     <LinearLayout
         android:layout_margin="20dp"
@@ -35,21 +48,21 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@+id/layout_1">
-        <RadioButton
+        <CheckBox
             android:id="@+id/morning"
             android:layout_weight="1"
             android:gravity="center"
             android:text="Morning"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-        <RadioButton
+        <CheckBox
             android:id="@+id/afternoon"
             android:layout_weight="1"
             android:gravity="center"
             android:text="Afternoon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-        <RadioButton
+        <CheckBox
             android:id="@+id/night"
             android:layout_weight="1"
             android:gravity="center"
@@ -57,4 +70,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
-</RelativeLayout>
+    <Button
+        android:id="@+id/Submit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="SUBMIT"/>
+</LinearLayout>
