--- a/app/src/main/res/layout/activity_medical__report.xml
+++ b/app/src/main/res/layout/activity_medical__report.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/white"
     tools:context=".adminDoc.Medical_Report">
     <LinearLayout
         android:id="@+id/layout_1"
@@ -43,33 +43,45 @@
             android:hint="Follow Up"/>
     </LinearLayout>
     <LinearLayout
-        android:layout_margin="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@+id/layout_1">
-        <CheckBox
-            android:id="@+id/morning"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Morning"
+        android:orientation="vertical"
+        >
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <CheckBox
-            android:id="@+id/afternoon"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Afternoon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <CheckBox
-            android:id="@+id/night"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Night"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="When to take"
+            android:textSize="17sp"/>
+        <LinearLayout
+            android:layout_margin="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <CheckBox
+                android:id="@+id/morning"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Morning"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <CheckBox
+                android:id="@+id/afternoon"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Afternoon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <CheckBox
+                android:id="@+id/night"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Night"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </LinearLayout>
+
     <Button
         android:id="@+id/Submit"
         android:layout_width="wrap_content"
