--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,6 +49,10 @@
                     android:layout_height="match_parent"
                     android:layout_below="@+id/v2"
                     android:id="@+id/home_departments_recycler_view"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_below="@+id/home_departments_recycler_view"/>
             </RelativeLayout>
         </ScrollView>
 
@@ -83,5 +87,6 @@
         android:id="@+id/bottom_sheet_bg"
         android:background="#e6000000"
         android:visibility="gone"/>
+
     <include layout="@layout/home_bottom_sheet"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
