Added dispenser list

--- a/app/src/main/res/menu/logout_for_admin_menu.xml
+++ b/app/src/main/res/menu/logout_for_admin_menu.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         app:showAsAction="never"
         android:title="Sign Out"/>
+    <item
+        android:id="@+id/dispenser"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:title="Dispenser"/>
+
 </menu>
