--- a/app/src/main/res/layout/activity_login_doc.xml
+++ b/app/src/main/res/layout/activity_login_doc.xml
@@ -25,6 +25,7 @@
             android:textSize="25sp"
             android:textStyle="bold" />
 
+
         <EditText
             android:id="@+id/login_emailid"
             android:singleLine="true"
@@ -62,6 +63,31 @@
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="16sp" />
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/radio_group_stu"
+            android:orientation="horizontal"
+            >
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/student"
+                android:text="Student"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:padding="20dp"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/doctor"
+                android:text="Doctor"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:padding = "20dp"/>
+
+        </RadioGroup>
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -115,6 +141,7 @@
         android:text="@string/newUser"
         android:textColor="@color/white"
         android:textSize="15sp" />
+
     <ProgressBar
         android:id="@+id/progress_circular"
         android:visibility="invisible"
