--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -1,19 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="10dp"
+    android:gravity="center">
+<Button
+    android:layout_width="190dp"
+    android:layout_height="190dp"
+    android:id="@+id/b1"
+    android:text="WARDS"
+    android:textStyle="italic"
+    android:textSize="25sp"
 
-    <TextView
-        android:id="@+id/text_gallery"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    ></Button>
+    <Button
+        android:layout_width="190dp"
+        android:layout_height="190dp"
+        android:layout_toRightOf="@id/b1"
+        android:id="@+id/b2"
+        android:text="MEDICAL EQUIPMENTS"
+        android:textStyle="italic"
+        android:textSize="25sp"
+        ></Button>
+    <Button
+        android:layout_width="190dp"
+        android:layout_height="190dp"
+        android:id="@+id/b3"
+        android:text="CLINICAL LAB"
+        android:layout_below="@id/b1"
+        android:textStyle="italic"
+        android:textSize="25sp"
+        ></Button>
+    <Button
+        android:layout_width="190dp"
+        android:layout_height="190dp"
+        android:id="@+id/b4"
+        android:text="PHARMACY"
+        android:layout_toRightOf="@id/b3"
+        android:layout_below="@id/b2"
+        android:textStyle="italic"
+        android:textSize="25sp"
+        ></Button>
+    <Button
+        android:layout_width="220dp"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_height="190dp"
+        android:id="@+id/b5"
+        android:text="PHYSIOTHERAPY CLINIC"
+        android:layout_below="@id/b3"
+
+        android:textStyle="italic"
+        android:textSize="25sp"
+        ></Button>
+</RelativeLayout>
