--- a/app/src/main/res/layout/dispenser_fragment.xml
+++ b/app/src/main/res/layout/dispenser_fragment.xml
@@ -9,22 +9,27 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/name_of_the_medicine"
-                android:textStyle="bold"
-                android:text="Name of the medicine"
-                android:textSize="25sp"/>
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/quantity_of_the_medicine"
-                android:textStyle="bold"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:padding="10dp"
+                android:text="Name of the medicine"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/quantity_of_the_medicine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:gravity="end"
+                android:padding="10dp"
                 android:text="Quantity"
-                android:textSize="25sp"/>
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
         <view class="androidx.recyclerview.widget.RecyclerView"
