--- a/app/src/main/res/layout/cardview_dispenser.xml
+++ b/app/src/main/res/layout/cardview_dispenser.xml
@@ -1,45 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginTop="5dp">
+        app:cardCornerRadius="10dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
+                android:id="@+id/name_of_the_medicine"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/name_of_the_medicine"
                 android:layout_weight="1"
-                android:text="ABC"
                 android:padding="10dp"
-                android:textSize="20sp"/>
+                android:text="ABC"
+                android:textColor="#000000"
+                android:textSize="20sp" />
+
             <View
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
-                android:background="#d3d3d3"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"/>
+                android:layout_marginBottom="5dp"
+                android:background="#d3d3d3" />
 
             <TextView
+                android:id="@+id/quantity_of_the_medicine"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/quantity_of_the_medicine"
                 android:layout_weight="2"
                 android:gravity="end"
                 android:padding="10dp"
                 android:text="Quantity"
-                android:textSize="20sp"/>
+                android:textColor="#000000"
+                android:textSize="20sp" />
         </LinearLayout>
 
 
