--- a/app/src/main/res/layout/dispenser_fragment.xml
+++ b/app/src/main/res/layout/dispenser_fragment.xml
@@ -6,39 +6,43 @@
     android:orientation="vertical"
     tools:context=".ui.medicalrecords.MedicalRecords">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/name_of_the_medicine"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed-medium"
-                android:padding="10dp"
-                android:text="Name of the medicine"
-                android:textSize="25sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/name_of_the_medicine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:padding="10dp"
+            android:text="Name of the medicine"
+            android:textColor="#000000"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/quantity_of_the_medicine"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed-medium"
-                android:gravity="end"
-                android:padding="10dp"
-                android:text="Quantity"
-                android:textSize="25sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-        <view class="androidx.recyclerview.widget.RecyclerView"
+        <TextView
+            android:id="@+id/quantity_of_the_medicine"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/medicines_recycle">
+            android:fontFamily="sans-serif-condensed-medium"
+            android:gravity="end"
+            android:padding="10dp"
+            android:text="Quantity"
+            android:textColor="#000000"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <view
+        android:id="@+id/medicines_recycle"
+        class="androidx.recyclerview.widget.RecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
 
-        </view>
+    </view>
 
 
 </LinearLayout>
