--- a/app/src/main/res/layout/activity_dispenser_activity.xml
+++ b/app/src/main/res/layout/activity_dispenser_activity.xml
@@ -10,21 +10,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/name_of_the_medicine"
-            android:textStyle="bold"
-            android:text="Name of the medicine"
-            android:textSize="25sp"/>
 
         <TextView
+            android:id="@+id/name_of_the_medicine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:padding="10dp"
+            android:text="Name of the medicine"
+            android:textColor="#000000"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/quantity_of_the_medicine"
-            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:gravity="end"
+            android:padding="10dp"
             android:text="Quantity"
-            android:textSize="25sp"/>
+            android:textColor="#000000"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
     <view class="androidx.recyclerview.widget.RecyclerView"
