--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#012951</color>
     <color name="colorPrimaryDark">#011C38</color>
-    <color name="colorAccent">#012951</color>
+    <color name="colorAccent">#E1E5F2</color>
     <color name="background_color">#009688</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
