--- a/app/src/main/res/layout/service_message.xml
+++ b/app/src/main/res/layout/service_message.xml
@@ -33,6 +33,7 @@
 
         <EditText
             android:id="@+id/edit_text"
+            android:textColor="@color/white"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
