--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -73,7 +73,7 @@
                 android:padding="5dp"
                 android:textSize="20sp"
                 android:textColor="#000000"
-                android:id="@+id/txt_meds"></TextView>
+                android:id="@+id/txt_meds"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
